@@ -39,9 +39,8 @@ Global
 	EndGlobalSection
 	GlobalSection(AutomaticVersions) = postSolution
 		PrimaryVersionType.Release|Any CPU = AssemblyVersionAttribute
-		UpdateAssemblyVersion.Release|Any CPU = True
+		UpdateAssemblyVersion.Release|Any CPU = False
 		UpdateAssemblyFileVersion.Release|Any CPU = False
 		UpdateAssemblyInfoVersion.Release|Any CPU = False
-		AssemblyVersionSettings.Release|Any CPU = None.None.Increment.DeltaDayStamp
 	EndGlobalSection
 EndGlobal
